@@ -75,6 +75,10 @@ function get_volsize($pool, $name) {
 	mwexec2("zfs get -H -o value volsize $pool/$name 2>&1", $rawdata);
 	return $rawdata[0];
 }
+function get_volused($pool, $name) {
+	mwexec2("zfs get -H -o value used $pool/$name 2>&1", $rawdata);
+	return $rawdata[0];
+}
 
 function zfsvolume_process_updatenotification($mode, $data) {
 	global $config;
@@ -132,9 +136,10 @@ function zfsvolume_process_updatenotification($mode, $data) {
 				<table width="100%" border="0" cellpadding="0" cellspacing="0">
 					<tr>
 						<td width="20%" class="listhdrlr"><?=gettext("Pool");?></td>
-						<td width="25%" class="listhdrr"><?=gettext("Name");?></td>
+						<td width="20%" class="listhdrr"><?=gettext("Name");?></td>
 						<td width="10%" class="listhdrr"><?=gettext("Size");?></td>
-						<td width="35%" class="listhdrr"><?=gettext("Description");?></td>
+						<td width="10%" class="listhdrr"><?=gettext("Sparse");?></td>
+						<td width="30%" class="listhdrr"><?=gettext("Description");?></td>
 						<td width="10%" class="list"></td>
 					</tr>
 					<?php foreach ($a_volume as $volumev):?>
@@ -144,8 +149,10 @@ function zfsvolume_process_updatenotification($mode, $data) {
 						<td class="listr"><?=htmlspecialchars($volumev['name']);?>&nbsp;</td>
 						<?php if (UPDATENOTIFY_MODE_MODIFIED == $notificationmode || UPDATENOTIFY_MODE_NEW == $notificationmode):?>
 						<td class="listr"><?=htmlspecialchars($volumev['volsize']);?>&nbsp;</td>
+						<td class="listr"><?=htmlspecialchars((!isset($volumev['sparse']) ? '-' : 'on'));?>&nbsp;</td>
 						<?php else:?>
 						<td class="listr"><?=htmlspecialchars(get_volsize($volumev['pool'][0], $volumev['name']));?>&nbsp;</td>
+						<td class="listr"><?=htmlspecialchars(isset($volumev['sparse']) ? get_volused($volumev['pool'][0], $volumev['name']) : '-');?>&nbsp;</td>
 						<?php endif;?>
 						<td class="listbg"><?=htmlspecialchars($volumev['desc']);?>&nbsp;</td>
 						<?php if (UPDATENOTIFY_MODE_DIRTY != $notificationmode):?>
@@ -161,7 +168,7 @@ function zfsvolume_process_updatenotification($mode, $data) {
 					</tr>
 					<?php endforeach;?>
 					<tr>
-						<td class="list" colspan="4"></td>
+						<td class="list" colspan="5"></td>
 						<td class="list">
 							<a href="disks_zfs_volume_edit.php"><img src="plus.gif" title="<?=gettext("Add volume");?>" border="0" alt="<?=gettext("Add volume");?>" /></a>
 						</td>
